MOO-2265: Timer overlapping header issue

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -188,7 +188,6 @@ footer {
         padding-bottom: 0px;
         height: 85px;
         max-height: 85px;
-        z-index: 1018!important;
 }
 
 
